2011-11-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Fix to compile again (use ifdef to consistently
	have/not-have tiny strings), and tidy use of whitespace for readability
	and coding standards.
	I like the experimental tiny strings idea... will definitely save
	space, but will need a lot of optimisation (like that of literal
	strings) to stop it being slow.
	Until it's about as fast as literal strings, we should probably only
	enable it on platforms where memory footprint is an issue.
	Not sure how to do that though.

2011-11-16 20:48  theraven

	* Source/GSString.m: Store tiny strings (up to 8
	ASCII characters) inside the pointer. Strings of this length are
	fairly common, and this makes them very cheap to store/copy/compare
	(pointer comparisons test for equality). 8 characters seems to be
	enough for quite a lot of common uses, such as path components and
	tokens.
	There are possibly still some things constructing tiny strings and not
	using these.

2011-11-16 17:29  theraven

	* Source/NSNumber.m: Implement the double boxing
	techniques used by Smalltalk/X and Cincom Smalltalk. Now we can
	conceal most doubles inside a pointer. This is most useful for
	LanguageKit, but should save some memory / malloc overhead / heap
	fragmentation in any code that uses a lot of NSNumbers (e.g.
	anything that deals with big plists). OS X 10.7 employs a similar
	trick.

2011-11-15  Adam Fedor  <fedor@gnu.org>

	* Source/win32/GSFileHandle.m: Fix include location

2011-11-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: Deal with old FIXME saying that whether
	we create the GNUstep/Library directory should be configurable.
	Also, break long lines to confiorm to coding standards and for
	consistency.

2011-11-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: ([-setObject:forKey:]) replace missing
	return statement after removing object.

2011-11-07  Fred Kiefer <FredKiefer@gmx.de>
